...
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/set_reminder" />

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminderDateTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reminder_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reminderDate"
                    app:localDate="@{viewModel.reminderDate}"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reminderTimeTextField"
                style="@style/textBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reminder_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reminderTime"
                    app:localTime="@{viewModel.reminderTime}"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/setReminderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_button"
                android:textSize="14sp"/>

...
